syntax = "proto3";

package user.v1;

option go_package = "user/v1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string tenant_id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserResponse {
  string id = 1;
  string tenant_id = 2;
  string name = 3;
  string email = 4;
  string created_at = 5;
}
